welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:7: error: '=' expected but '(' found.
def readColumn():Array[Color](worldHeight) = {
                             ^Array2:18: error: illegal start of simple expression
}
^